--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Destination Mockup</div>
+        <div id="unity-build-title">My little planet</div>
       </div>
     </div>
     <script>
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/webBuild.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webBuild.data.gz",
-        frameworkUrl: buildUrl + "/webBuild.framework.js.gz",
-        codeUrl: buildUrl + "/webBuild.wasm.gz",
+        dataUrl: buildUrl + "/webBuild.data",
+        frameworkUrl: buildUrl + "/webBuild.framework.js",
+        codeUrl: buildUrl + "/webBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My little planet",
